align(core,runtime): converge 2.0.x to 3.0.x core contract (P0 batch)
codegraph 三方符号对比驱动的对齐（目标：五轴之外零差异）：

1. core 全量对齐 3.0.x 版本（除 EventPayloadSerializer 保留 Jackson2——允许轴）：
   - 新增 ProjectionStatus.java（3.0.x 独有，guice ViewManager 依赖）
   - AggregateRoot 升级为 3.0.x 版：apply(E,boolean replay) 统一回放语义
     （ignoreOnReplay 跳过 + 回放不入队 + resolveHandler on<Type> 回退）
   - 其余为 header/javadoc/参数名级收敛（符号层 2↔3 仅 4 处签名差异，
     其中 JsonKit/CdiPublisher 属 Jackson/quarkus 允许轴）
2. runtime-guice 整模块同步 3.0.x 版：
   - 新增 Ddd4jCommandGuiceModule/GuiceCommandBus/GuiceConstants/
     Ddd4jJdbcProjectionGuiceModule/GuiceJdbcProjectionPositionRepository/
     MicrometerProjectionMetrics + 4 测试
   - 命令总线从 Ddd4jGuiceModule 内嵌拆分为独立 Module（3.0.x 结构）
3. SpringDomainEventPublisher 补 publish(Object) 兼容桥
   （与 3.0.x/CdiDomainEventPublisher 行为对齐，非 DomainEvent 显式 warn）

验证：mvn compile 全量 BUILD SUCCESS（2.0.x 全模块）